std-toolkit/src/eschema/cli/__tests__/fixtures/schema-snapshots/invalid-structure/domain/billing/invoice/versions/latest.ts
export const latest = v1;
